@startuml Allergen_Overview_ClassDiagram

title User Story 01: Allergen Overview
subtitle Opdracht 4 - BE Project

' Database Models
package "Models" {
    class Product {
        -id: BigInteger
        -Naam: String
        -Barcode: String
        -IsActief: Boolean
        -Opmerking: String
        -DatumAangemaakt: DateTime
        -DatumGewijzigd: DateTime
        +magazijn(): Magazijn
        +allergeens(): Collection<Allergeen>
        +leveranciers(): Collection<Leverancier>
    }

    class Allergeen {
        -id: BigInteger
        -Naam: String
        -Omschrijving: String
        -IsActief: Boolean
        -Opmerking: String
        -DatumAangemaakt: DateTime
        -DatumGewijzigd: DateTime
        +products(): Collection<Product>
    }

    class ProductPerAllergeen {
        -id: BigInteger
        -ProductId: BigInteger
        -AllergeenId: BigInteger
        -IsActief: Boolean
        -Opmerking: String
        -DatumAangemaakt: DateTime
        -DatumGewijzigd: DateTime
    }

    class Leverancier {
        -id: BigInteger
        -Naam: String
        -ContactPersoon: String
        -LeverancierNummer: String
        -Mobiel: String
        -ContactId: BigInteger (nullable)
        -IsActief: Boolean
        -Opmerking: String
        -DatumAangemaakt: DateTime
        -DatumGewijzigd: DateTime
        +products(): Collection<Product>
        +contact(): Contact
        +productPerLeveranciers(): Collection<ProductPerLeverancier>
    }

    class ProductPerLeverancier {
        -id: BigInteger
        -LeverancierId: BigInteger
        -ProductId: BigInteger
        -DatumLevering: Date
        -Aantal: Integer
        -DatumEerstVolgendeLevering: Date (nullable)
        -IsActief: Boolean
        -Opmerking: String
        -DatumAangemaakt: DateTime
        -DatumGewijzigd: DateTime
    }

    class Contact {
        -id: BigInteger
        -Straat: String
        -Huisnummer: Integer
        -Postcode: String
        -Stad: String
        -IsActief: Boolean
        -Opmerking: String
        -DatumAangemaakt: DateTime
        -DatumGewijzigd: DateTime
    }

    class Magazijn {
        -id: BigInteger
        -ProductId: BigInteger
        -VerpakkingsEenheid: Decimal
        -AantalAanwezig: Integer (nullable)
        -IsActief: Boolean
        -Opmerking: String
        -DatumAangemaakt: DateTime
        -DatumGewijzigd: DateTime
        +product(): Product
    }
}

' Controller
package "Controllers" {
    class AllergeenController {
        -allergeens: AllergeenService
        +index(Request): View
        +supplierDetails(int productId): View
    }
}

' Services
package "Services" {
    class AllergeenService {
        +getProductsWithAllergies(int allergenId): Collection
        +getSupplierDetails(int productId): Supplier
        +getAllergensForProduct(int productId): Collection
    }
}

' Views
package "Views" {
    class "allergeens/index.blade.php" {
        Displays allergen overview
        Implements filtering by allergen
        Shows pagination (4 items per page)
        Scenario 01 implementation
    }

    class "allergeens/supplier-details.blade.php" {
        Displays supplier information
        Shows contact details if available
        Scenarios 02 & 03 implementation
    }
}

' Relationships
Product "1" -- "*" Magazijn : contains
Product "1" -- "*" ProductPerAllergeen : has
Allergeen "1" -- "*" ProductPerAllergeen : in
ProductPerAllergeen --> Product : references
ProductPerAllergeen --> Allergeen : references
Product "*" -- "*" Leverancier : supplied_by
Product "*" -- "*" ProductPerLeverancier : has
Leverancier "*" -- "*" ProductPerLeverancier : supplies
Leverancier "1" -- "*" Contact : has
Contact "1" -- "*" Leverancier : used_by

AllergeenController --> AllergeenService : uses
AllergeenService --> Product : queries
AllergeenService --> Allergeen : queries
AllergeenService --> Leverancier : queries
AllergeenController --> "allergeens/index.blade.php" : renders
AllergeenController --> "allergeens/supplier-details.blade.php" : renders

note right of Product
    Represents candy products
    with allergen information
end note

note right of Allergeen
    Allergen types (Gluten, Gelatine, etc.)
    describing harmful substances
end note

note right of Leverancier
    Suppliers providing products
    with optional contact information
end note

note right of AllergeenController
    Handles User Story 01:
    - Scenario 01: Filter by allergen
    - Scenario 02: Show supplier with address
    - Scenario 03: Show supplier without address
end note

@enduml
